--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-responsive-screen": "^1.2.0",
     "react-navigation": "^3.3.0",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
     "util": "*"
   },
   "devDependencies": {
