--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo-ads-admob": "^3.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-admob": "^2.0.0-beta.5",
     "react-native-responsive-screen": "^1.2.0",
     "react-navigation": "^3.3.0",
     "react-redux": "^6.0.1",
